geoportailv3/static/less/sidebar.less
#sidebar {
  h2 {
    font-size: 40px;
    line-height: 1;
    padding: 12px 0 12px 12px;
    margin: 0;
    text-transform: uppercase;
    color: #fff;
  }

  .close-panel {
    position: absolute;
    right: 10px;
    top: 12px;
    color: #fff;
  }

  app-backgroundlayer {
    > div {
      margin-bottom: 15px;
      .dropdown {
        display: inline-block;
        button {
          min-width: 120px;
        }
      }
    }
  }

  &> div {
    height: 100%;
  }

  .nav-tabs>li {
    padding-right: 5px;
    &>a {
      text-transform: uppercase;
      font-size: 24px;
      line-height: 1;
      border: 0;
    }
  }

  #layers .tab-content {
    // Height calculation:
    // 100% - h2 font-size - padding-top - padding-bottom -
    //   (app-backgroundlayer) @input-height-base - margin-bottom -
    //   tab font-size - tab padding*2;
    // FIXME: use variables for the calculation
    height: ~"calc(100% - 40px - 2 * 12px - @{input-height-base} - 15px - 24px - 2 * 10px)";
    overflow: hidden;
  }

  .themes-switcher {
    overflow-y: auto;
    overflow-x: hidden;
    max-height: ~"calc(100% - 105px - 2 * 12px - @{input-height-base} - 15px - 24px - 2 * 10px)";
    position: absolute;
    width:100%;
    -webkit-transition: none;
    transition: none;
  }
  #infos .container-fluid {
    overflow-y: scroll;
    max-height: 80%; //fallback for browsers without calc support
    max-height: ~"calc(100% - 80px)";
    
  }
}

